fixed the footer font to fit on mobile .footer-nav font-size .8 rem

--- a/css/style.css
+++ b/css/style.css
@@ -169,4 +169,9 @@ u {
     max-width: 100px;
     }
 
+    .footer-nav a{
+        font-size: .8rem;
+        padding: 0 .2rem 0 .2rem;
+        align-content: space-around;
+    }
 }
